[tool.poetry]
name = "vmac"
version = "0.1.0"
description = ""
authors = ["Ângelo Lovatto <angelolovatto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
raylab = "^0.14.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
