[tool.poetry]
name = "vmac"
version = "0.1.0"
description = ""
authors = ["Ângelo Lovatto <angelolovatto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
raylab = "^0.14.17"
gym = "^0.17.3"
wandb = "^0.10.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.9.2"
pylint = "^2.6.0"
reorder-python-imports = "^2.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
